--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Blog</title>
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-5.3.3-dist/css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -32,10 +33,11 @@
                 {% endif %}
                 
                 <!-- Owner Profile Info -->
-                <li class="nav-item profile-info">
-                    <img id="profile-image" src="" alt="Owner Avatar">
-                    <span id="profile-name"></span>
-                    <p id="profile-bio"></p>
+                <li class="nav-item profile-info d-flex align-items-center">
+                    <img id="profile-image" src="{{owner_profile.avatar}}" alt="Owner Avatar" class="rounded-circle" width="40" height="40">
+                    <div class="ms-2"><span id="profile-name">{{owner_profile.name}}</span>
+                        <p id="profile-bio" class="mb-0">{{owner_profile.bio}}</p>
+                    </div>
                 </li>
 
                 <!-- Theme Toggle Button -->
@@ -45,13 +47,14 @@
             </ul>
         </div>
     </nav>
-    {% block content %}{% endblock %}
+    {% block content %}
+    {% endblock %}
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="{{ url_for('static', filename='bootstrap-5.3.3-dist/js/bootstrap.min.js') }}"></script>
 
     <!-- Custom JS -->
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
 </html>
